{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 798,
  "lineage": "126ed4ce-5005-ddf9-fc87-04060103a23f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:security-group/sg-0f68348a8d3e85c1d",
            "description": "Security group for control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "16.12.59.0/24",
                  "3.5.224.0/22",
                  "16.12.18.0/23",
                  "52.95.154.0/23",
                  "16.12.20.0/24",
                  "52.95.156.0/24",
                  "10.0.0.0/16"
                ],
                "description": "Allow cluster control plane to send communication to the worker Kubelets and pods",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f68348a8d3e85c1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "Ingress rule for worker Kubelets and pods",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-control-plane-sg",
            "name_prefix": "",
            "owner_id": "891288190130",
            "revoke_rules_on_delete": false,
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "k8s-control-plane-sg",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "k8s-control-plane-sg",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:security-group/sg-085cce31f1d250801",
            "description": "Security group for data plane",
            "egress": [
              {
                "cidr_blocks": [
                  "16.12.59.0/24",
                  "3.5.224.0/22",
                  "16.12.18.0/23",
                  "52.95.154.0/23",
                  "16.12.20.0/24",
                  "52.95.156.0/24",
                  "10.0.0.0/16"
                ],
                "description": "Egress rule for worker Kubelets and pods",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085cce31f1d250801",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-data-plane-sg",
            "name_prefix": "",
            "owner_id": "891288190130",
            "revoke_rules_on_delete": false,
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "k8s-data-plane-sg",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "k8s-data-plane-sg",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "Ingress rule for worker Kubelets and pods",
            "from_port": 0,
            "id": "sgrule-2131082315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f68348a8d3e85c1d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "16.12.59.0/24",
              "3.5.224.0/22",
              "16.12.18.0/23",
              "52.95.154.0/23",
              "16.12.20.0/24",
              "52.95.156.0/24",
              "10.0.0.0/16"
            ],
            "description": "Allow cluster control plane to send communication to the worker Kubelets and pods",
            "from_port": 0,
            "id": "sgrule-37721369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f68348a8d3e85c1d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.aws_vpc_endpoint.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "16.12.59.0/24",
              "3.5.224.0/22",
              "16.12.18.0/23",
              "52.95.154.0/23",
              "16.12.20.0/24",
              "52.95.156.0/24",
              "10.0.0.0/16"
            ],
            "description": "Egress rule for worker Kubelets and pods",
            "from_port": 0,
            "id": "sgrule-3045117995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-085cce31f1d250801",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.aws_vpc_endpoint.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3737306819",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-085cce31f1d250801",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2101498287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085cce31f1d250801",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:security-group/sg-01c969f258113a3db",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01c969f258113a3db",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891288190130",
            "revoke_rules_on_delete": false,
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "eks-lab-cluster-module-default-security-group",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "eks-lab-cluster-module-default-security-group",
              "infra": "terraform"
            },
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:route-table/rtb-066148ce85cecff75",
            "id": "rtb-066148ce85cecff75",
            "owner_id": "891288190130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "-private-eu-west-3a",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "-private-eu-west-3a",
              "infra": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:route-table/rtb-02bb5b89bc267a939",
            "id": "rtb-02bb5b89bc267a939",
            "owner_id": "891288190130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "-private-eu-west-3b",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "-private-eu-west-3b",
              "infra": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073bbc058f9bd7c1a",
            "route_table_id": "rtb-066148ce85cecff75",
            "subnet_id": "subnet-05241bb4630b17ff4"
          },
          "dependencies": [
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c22c451324060ea",
            "route_table_id": "rtb-02bb5b89bc267a939",
            "subnet_id": "subnet-0d873c0f6a237c366"
          },
          "dependencies": [
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:subnet/subnet-05241bb4630b17ff4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05241bb4630b17ff4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891288190130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "private-subnet-0",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "private-subnet-0",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:subnet/subnet-0d873c0f6a237c366",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d873c0f6a237c366",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891288190130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "private-subnet-1",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "private-subnet-1",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc/vpc-04e6478969db0a23d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0230a1346b06d9144",
            "default_route_table_id": "rtb-01edb32ebdac40b26",
            "default_security_group_id": "sg-01c969f258113a3db",
            "dhcp_options_id": "dopt-0541c88831367b83c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e6478969db0a23d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01edb32ebdac40b26",
            "owner_id": "891288190130",
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "eks-lab-vpc-module",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "eks-lab-vpc-module",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster-module": "owned"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-068cbd9d7cacea0a6",
            "dns_entry": [
              {
                "dns_name": "vpce-068cbd9d7cacea0a6-4zzpxiwn.ec2.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-068cbd9d7cacea0a6-4zzpxiwn-eu-west-3a.ec2.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-068cbd9d7cacea0a6-4zzpxiwn-eu-west-3b.ec2.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ec2.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z02850143IKNOFJUS8LIY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-068cbd9d7cacea0a6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-016201b0b211195be",
              "eni-0e3a119e68b8d0086"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085cce31f1d250801"
            ],
            "service_name": "com.amazonaws.eu-west-3.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-05241bb4630b17ff4",
              "subnet-0d873c0f6a237c366"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ec2",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ec2",
              "infra": "terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-07405b3ae720a9058",
            "dns_entry": [
              {
                "dns_name": "vpce-07405b3ae720a9058-oueao4o9.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-07405b3ae720a9058-oueao4o9-eu-west-3a.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-07405b3ae720a9058-oueao4o9-eu-west-3b.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ec2messages.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z02357971XZ0AC9I9DMY3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-07405b3ae720a9058",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09cf85c15f5962284",
              "eni-0b1f4f506c8ca73df"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085cce31f1d250801"
            ],
            "service_name": "com.amazonaws.eu-west-3.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-05241bb4630b17ff4",
              "subnet-0d873c0f6a237c366"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ec2messages",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ec2messages",
              "infra": "terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-023dfa2b35b4c66ab",
            "dns_entry": [
              {
                "dns_name": "vpce-023dfa2b35b4c66ab-4nnupjzd.api.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-023dfa2b35b4c66ab-4nnupjzd-eu-west-3b.api.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-023dfa2b35b4c66ab-4nnupjzd-eu-west-3a.api.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "api.ecr.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z02367512C991QHVR9D10"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-023dfa2b35b4c66ab",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0acafab3112fe0ae8",
              "eni-0c239ca530431b7e0"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085cce31f1d250801"
            ],
            "service_name": "com.amazonaws.eu-west-3.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-05241bb4630b17ff4",
              "subnet-0d873c0f6a237c366"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ecr_api",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ecr_api",
              "infra": "terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-064521495246b4da6",
            "dns_entry": [
              {
                "dns_name": "vpce-064521495246b4da6-ywlg055b.dkr.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-064521495246b4da6-ywlg055b-eu-west-3a.dkr.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-064521495246b4da6-ywlg055b-eu-west-3b.dkr.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "dkr.ecr.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z02859511OC4NCLRQQBTZ"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z02859511OC4NCLRQQBTZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-064521495246b4da6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-006db1213e4cc0e3a",
              "eni-0fcc2baa3a8587c9a"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085cce31f1d250801"
            ],
            "service_name": "com.amazonaws.eu-west-3.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-05241bb4630b17ff4",
              "subnet-0d873c0f6a237c366"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ecr_dkr",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ecr_dkr",
              "infra": "terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-0bb3fff3510da6d70",
            "cidr_blocks": [
              "16.12.59.0/24",
              "3.5.224.0/22",
              "16.12.18.0/23",
              "52.95.154.0/23",
              "16.12.20.0/24",
              "52.95.156.0/24"
            ],
            "id": "vpce-0bb3fff3510da6d70",
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02bb5b89bc267a939",
              "rtb-066148ce85cecff75"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "state": "available",
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "s3",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "s3",
              "infra": "terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-0beac8a2f913fd231",
            "dns_entry": [
              {
                "dns_name": "vpce-0beac8a2f913fd231-gx5w8eua.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0beac8a2f913fd231-gx5w8eua-eu-west-3b.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0beac8a2f913fd231-gx5w8eua-eu-west-3a.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ssm.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z029922733ARCPPNC2M6P"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0beac8a2f913fd231",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-039eb4b6522e36e0b",
              "eni-0d256ad23bdb133e1"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085cce31f1d250801"
            ],
            "service_name": "com.amazonaws.eu-west-3.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-05241bb4630b17ff4",
              "subnet-0d873c0f6a237c366"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ssm",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ssm",
              "infra": "terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-0872a0b8acf68fbcc",
            "dns_entry": [
              {
                "dns_name": "vpce-0872a0b8acf68fbcc-51aazp41.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0872a0b8acf68fbcc-51aazp41-eu-west-3a.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0872a0b8acf68fbcc-51aazp41-eu-west-3b.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ssmmessages.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z02371731Z3TBO8F9JBWT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0872a0b8acf68fbcc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-032cc08588a40ae0e",
              "eni-054191850c05586b4"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085cce31f1d250801"
            ],
            "service_name": "com.amazonaws.eu-west-3.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-05241bb4630b17ff4",
              "subnet-0d873c0f6a237c366"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ssmmessages",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ssmmessages",
              "infra": "terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-077449bd4bbb20a00",
            "dns_entry": [
              {
                "dns_name": "vpce-077449bd4bbb20a00-oglgcr8t.sts.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-077449bd4bbb20a00-oglgcr8t-eu-west-3b.sts.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-077449bd4bbb20a00-oglgcr8t-eu-west-3a.sts.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "sts.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z02847272YYH58B0BU6CZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-077449bd4bbb20a00",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08864491e6a0dd3fb",
              "eni-0d3cbba5bdb262460"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085cce31f1d250801"
            ],
            "service_name": "com.amazonaws.eu-west-3.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-05241bb4630b17ff4",
              "subnet-0d873c0f6a237c366"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "sts",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "sts",
              "infra": "terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04e6478969db0a23d"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "data.aws_availability_zones.avzs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_vpc-endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}